[package]
name = "aoc7"
version = "0.1.0"
authors = ["aguilinger <aguilinger@ginkgobioworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde_json = "1.0.45"
cached = ""

[dependencies.petgraph]
version = "0.5.1"
features = ["serde-1"]